Bugs fixed --Footer Alignment

--- a/src/index.css
+++ b/src/index.css
@@ -328,7 +328,6 @@ span, span a{
   #resume-body{
     border-radius: 1rem;
     margin: 4rem 2rem 0 2rem;
-    height: 90vh;
   }
 
 }
@@ -356,7 +355,6 @@ span, span a{
   #resume-body{
     border-radius: 1rem;
     margin: 2rem 0 0 0;
-    height: 90vh;
   }
 }
 
